--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,21 @@
-<div class="hero-unit">
-<h1>Welcome to One Month Rails!</h1>
-	<p>
-	You found the home page for the
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-	application.
-	</p>
+<% if user_signed_in? %>
+	<h1> You're logged in! </h1>
 
-	<p>
-	<%= link_to "Sign up Now!", "#", class:"btn btn-large btn-primary" %>
-	</p>
-</div>
+<% else %>
+
+	<div class="hero-unit">
+		<h1>Welcome to One Month Rails!</h1>
+			<p>
+			You found the home page for the
+			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+			application.
+			</p>
+
+			<p>
+			<%= link_to "Sign up Now!", new_user_registration_path, class:"btn btn-large btn-primary" %>
+			</p>
+	</div>
+
+<% end %>
 	
 
