--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -5,8 +5,18 @@
 				  <b>Description:</b>
 				  <%= @pin.description %>
 				</p>
-				<%= link_to 'Edit', edit_pin_path(@pin) %> |
-				<%= link_to 'Back', pins_path %>
+				<p>
+				  <b>Name:</b>
+				  <%= @pin.user.name %>
+				</p>
+
+				<% if current_user == @pin.user %>
+					<%= link_to 'Edit', edit_pin_path(@pin) %> |
+				<% end %>
+
+					<%= link_to 'Back', pins_path %>
+				
+
 			</div>
 	</div>
 </div>
