--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -2,6 +2,7 @@
 	<div class="span6 offset3">
 			<div class="well"
 				<p>
+					<%= image_tag @pin.image %>
 				  <b>Description:</b>
 				  <%= @pin.description %>
 				</p>
